--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "codemirror": "^6.0.1",
     "codemirror-lang-spreadsheet": "^1.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.18.0"
   },
   "devDependencies": {
     "@codemirror/language": "^6.6.0",
     "@lezer/highlight": "^1.1.3",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
