--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "module": "es2020",
     "newLine": "lf",
     "declaration": false,
-    "moduleResolution": "node"
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+        "jsx": "react-jsx"
+
   },
-  "include": ["src/*.ts"]
+  "include": ["src/*.ts", "src/OurCode/ExampleWidget.tsx", "src/OurCode/tagWidget.ts", "src/OurCode/placeholders.ts", "src/OurCode/WidgetWrapper.ts"]
 }
